# Auto_Licences_Billing

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  arob.sh  pyproject.toml
.github/workflows/: ci.yml
artifacts/models/: rf_anomaly.joblib  rf_meta.json
artifacts/runs/exec_1efce7ff_2025-10/: report.csv
artifacts/runs/exec_86f25937_2025-09/: report.csv
artifacts/runs/exec_eda00dbb_2025-10/: report.csv
artifacts/runs/exec_f398388b_2025-10/: report.csv
artifacts/tmp/: input_2025-10.csv
configs/: base.yaml
data/samples/: usage_2025-09.xlsx  usage_2025-10.xlsx
docker/: Dockerfile.api  docker-compose.yml
monitoring/grafana/dashboards/: m365_billing_dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: prometheus.yml
services/api/: app.py
src/m365_billing/: main.py  settings.py  versioning.py
src/m365_billing/audit/: drift.py
src/m365_billing/connectors/: odoo_rpc.py
src/m365_billing/ml/: train_iforest.py  train_rf.py
src/m365_billing/observability/: logging.py  metrics.py
src/m365_billing/pipeline/: run_pipeline.py
src/m365_billing/store/: history_store.py
tests/: test_drift.py
