[project]
name = "auto-licences-billing"
version = "0.1.0"
description = "Middleware ingestion + audit + injection Odoo for M365 usage-based billing."
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0",
  "pandas>=2.0",
  "openpyxl>=3.1",
  "pyarrow>=15.0",
  "structlog>=24.1",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  ]


[project.scripts]
m365-billing = "m365_billing.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","B","UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
